-*- coding: utf-8; fill-column: 68 -*-


=======
CHANGES
=======
0.5.0rc3
========
- orm
    - "not equals" comparisons of simple many-to-one relation to an
      instance will not drop into an EXISTS clause and will compare
      foreign key columns instead.

    - Removed not-really-working use cases of comparing a collection
      to an iterable.  Use contains() to test for collection
      membership.

    - Improved the behavior of aliased() objects such that they more
      accurately adapt the expressions generated, which helps 
      particularly with self-referential comparisons. [ticket:1171]
      
    - Fixed bug involving primaryjoin/secondaryjoin conditions
      constructed from class-bound attributes (as often occurs 
      when using declarative), which later would be inappropriately 
      aliased by Query, particularly with the various EXISTS
      based comparators.
    
    - Fixed bug when using multiple query.join() with an aliased-bound
      descriptor which would lose the left alias.
      
    - Improved weakref identity map memory management to no longer
      require mutexing, resurrects garbage collected instance on a
      lazy basis for an InstanceState with pending changes.

    - relation() won't hide unrelated ForeignKey errors inside of
      the "please specify primaryjoin" message when determining join
      condition.

    - When using Query.join() with an explicit clause for the ON
      clause, the clause will be aliased in terms of the left side
      of the join, allowing scenarios like query(Source).
      from_self().join((Dest, Source.id==Dest.source_id)) to work
      properly.

    - polymorphic_union() function respects the "key" of each Column
      if they differ from the column's name.

    - Repaired support for "passive-deletes" on a many-to-one
      relation() with "delete" cascade. [ticket:1183]

    - Fixed bug in composite types which prevented a primary-key